--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -35,7 +35,7 @@
 .mesgs {
   float: left;
   padding: 30px 15px 0 25px;
-  width: 100%;
+  width: 600px;
 }
 
  .sent_msg p {
@@ -62,13 +62,13 @@
 
 .type_msg {border-top: 1px solid #c4c4c4;position: relative;}
 .msg_send_btn {
-  background: #05728f none repeat scroll 0 0;
-  border: medium none;
+  background: #ffffff;
+  border: medium;
   border-radius: 50%;
   color: #fff;
   cursor: pointer;
   font-size: 17px;
-  height: 33px;
+  height: 30px;
   position: absolute;
   right: 0;
   top: 11px;
