--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -5,6 +5,10 @@
     justify-content: center;
 }
 
+.game_wrapper_hor{
+    display: flex;
+}
+
 .game_wrapper > h2{
     font-size: 24px;
     margin-bottom: 20px;
