--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,17 @@
+
+
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inbox_msg {
+  margin: 40px;
+  padding: 20px;
+  margin: 20px;
+  border: 1px solid #c4c4c4;
   display: flex;
   flex-direction: column;
   align-items: center;
