--- a/styles/Room.module.css
+++ b/styles/Room.module.css
@@ -5,6 +5,17 @@
     justify-content: center;
 }
 
+.inbox_msg {
+    margin: 40px;
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid #c4c4c4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
 .lobby_wrapper > h2{
     font-size: 24px;
     margin-bottom: 20px;
