--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -23,13 +23,13 @@
   font-size: 14px;
   margin: 0;
   padding: 5px 10px 5px 12px;
-  width: 100%;
+  width: 80%;
 }
 .time_date {
   color: #747474;
   display: block;
   font-size: 12px;
-  margin: 8px 0 0;
+  margin: 8px 0 8px 0;
 }
 .received_withd_msg { width: 57%;}
 .mesgs {
@@ -54,7 +54,7 @@
 .input_msg_write input {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
   border: medium none;
-  color: #4c4c4c;
+  color: #ffffff;
   font-size: 15px;
   min-height: 48px;
   width: 100%;
